# ml-pipeline

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
ml_pipeline/: __main__.py  arguments.py  enums.py
ml_pipeline/tvs/fail_psf/: recipe.yaml
ml_pipeline/tvs/fail_psf/profiles/: local.yaml  remote.yaml
ml_pipeline/tvs/fail_psf/steps/: ingest.py  register_.py  split.py  train.py  transform.py
python-fmt-conf/: pyproject.toml
